Finalised unit services.
Refactored scripts to handle missing species and units in queries. Final version including all, species and unit pairs.
